fixed layout issues for chrome and other browsers/systems with a bigger scrollbar

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -49,8 +49,7 @@
 
 body {
   font-family: "Work Sans", Arial, Helvetica, sans-serif;
-  width: 100vw;
-  height: 100vh;
+  max-width: 100vw;
   padding: 0;
   margin: 0;
 }
